# dos14-Miholap_Aleksey_git-flow

./: .gitignore  Dockerfile  Dockerfile-nginx  Jenkinsfile  README.md  all_users.json  docker-compose.yml  main.py  pyproject.toml  users.json
ArgoCd/: README.md  project.yaml  root.yaml  testapp.yaml
ArgoCd/test/authztest/: Chart.yaml  values.yaml
ArgoCd/test/authztest/templates/: NOTES.txt  _helpers.tpl  ingress.yaml
ansible/: app_playbook.yml  inventory.ini
ansible/roles/clone_repo/handlers/: main.yml
ansible/roles/clone_repo/tasks/: main.yml
ansible/roles/create_user/tasks/: main.yml
ansible/roles/create_user/vars/: vault.yml
ansible/roles/install_docker/tasks/: main.yml
ansible/roles/install_git/tasks/: main.yml
ansible/roles/install_poetry/tasks/: main.yml
ansible/roles/install_python/tasks/: main.yml
ansible/roles/start_service/tasks/: main.yml
ansible/roles/start_service/templates/: authz_flask.service.j2
authz/: Chart.yaml  values.yaml
authz/templates/: deployment.yaml  hpa.yaml  ingress.yaml
charts/authz/: Chart.yaml  aws-prd.yaml  values-aws-dev.yaml  values-aws-prd.yaml
charts/authz/templates/: NOTES.txt  _helpers.tpl  configmap-nginx.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service-db.yaml  service.yaml  servicecccount.yaml
charts/authz/templates/tests/: test-connection.yaml
charts/authz/values/: aws-prd.yaml
hw-18/: README.md
hw16/: README.md  main.py  pyproject.toml
hw19/: README.md  main.py  pyproject.toml
nginx/: authz.conf  nginx.conf
project-hw15/: README.md  pyproject.toml
