[tool.poetry]
name = "project-hw15"
version = "0.1.0"
description = ""
authors = ["Aleksey Miholap <mixxxal1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
